objects/AMX_Team__c.object
<CustomObject>
    <fields>
        <fullName>Active_Status_Field_Name__c</fullName>
        <description>The API name of the field that determines if a record is &quot;active&quot; for this AMX Team.  Distributors owned by this team will ONLY be able to filter against records that have this correct value or values.</description>
        <inlineHelpText>The API name of the field that determines if a record is &quot;active&quot; for this AMX Team.  Distributors owned by this team will ONLY be able to filter against records that have this correct value or values.</inlineHelpText>
        <label>Active Status Field Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active_Status_Values__c</fullName>
        <description>A semicolon-delimited list of &quot;active&quot; values.</description>
        <label>Active Status Values</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Determines if this AMX Team is active or not.</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Execution_Order__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Order of execution for this team.</description>
        <inlineHelpText>Order of execution for this team.</inlineHelpText>
        <label>Execution Order</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Object_Name__c</fullName>
        <description>Name of the object that will be assigned to members of this team.</description>
        <label>Object Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Team_Hours__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The hours at which records will be assigned to this AMX Team.</description>
        <label>Team Hours</label>
        <referenceTo>AMX_Weekly_Schedule__c</referenceTo>
        <relationshipName>AMX_Teams</relationshipName>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Team_Hours__c</columns>
        <columns>Execution_Order__c</columns>
        <columns>Object_Name__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>PCG_MSF_F2F_AMX_Team</fullName>
        <filterScope>Queue</filterScope>
        <label>PCG - MSF F2F</label>
        <queue>PCG_MSF_F2F</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
</CustomObject>